--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
                             <p>影视详情id: <input type="text" name="detailid" id="moviedetailid" value="1"/><button class="event received" id="startmoviedetail" >id跳转影视详情</button></p>
                             <p>影视专题页id: <input type="text" name="topicid" id="movietopicid" value="1"/><button class="event received" id="startmovietopic" >id跳转影视专题</button></p>
                             <p><button class="event received" id="startmemcenter" >启动影视会员中心</button></p>
+                            <p><button class="event received" id="startmoviehome" >启动影视主页</button></p>
                             <p><button class="event received" id="startplaymovie" >播放测试影片</button></p>
                             <p><input type="text" id="systeminfoid" /><button class="event received" id="getsysteminfo" >获取设备信息</button></p>
                             <p><input type="text" id="isnetworkingid" /><button class="event received" id="getnetworking" >获取网络连接状态</button></p>
@@ -92,9 +93,11 @@
                                 游戏列表页title: <input type="text" name="title" id="gametitleid" value="1"/><button class="event received" id="startgamelist" >id跳转酷游吧列表</button></p>
                             <p>游戏详情页id: <input type="text" name="detailid" id="gamedetailid" value="1"/><button class="event received" id="startgamedetail" >id跳转酷游吧详情</button></p>
                             <p>游戏专题页id: <input type="text" name="zoneid" id="gamezoneid" value="1"/><button class="event received" id="startgamezone" >id跳转酷游吧专题</button></p>
-                            <p>网络拔插事件<input type="text" id="netchanged" />
-                            <p>u盘拔插事件<input type="text" id="usbchanged" />
-                            <p>应用下载事件<input type="text" id="downloadchanged" />
+                            <p>网络拔插事件<input type="text" id="netchanged" /></p>
+                            <p>u盘拔插事件<input type="text" id="usbchanged" /></p>
+                            <p>应用下载事件<input type="text" id="downloadchanged" /></p>
+                            <p><button class="event received" id="startpurcharse" >启动支付订单</button>
+                                支付完成事件<input type="text" id="purcharsecallback" /></p>
                         </td>
                     </tr>
                 </table>
