add get user-access-token,fix download error

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
                             <p><button class="event received" id="startmssagebox" >启动消息盒子</button></p>
                             <p><button class="event received" id="startupgrade" >启动系统升级</button></p>
                             <p><input type="text" id="locationid" /><button class="event received" id="getlocation" >获取定位信息</button></p>
+                            <p><input type="text" id="usertokenid" /><button class="event received" id="getusertoken" >获取用户token</button></p>
                         </td>
                         <td width='225px'>
                             <p>影视列表id: <input type="text" name="listid" id="movielistid" value="1"/><button class="event received" id="startmovielist" >id跳转影视列表</button></p>
